@@ -10,6 +10,7 @@ Version 2.2.5
    - Changed version to 2.2.5
    - Fixed incompatibility in the about dialog (API change from gtk 2.8 to
         gtk 2.10?; this bug was reported by Sebastian Breier as #1621270)
+   - Bugfix: Handling of the "delete-event" in the about dialog
 
 Version 2.2.4		2006-12-10 19:47
  * Robert Sowada
